integrate the latest `gix-protocol` into `radicle-fetch`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,4 @@ clippy.enum_variant_names = "allow"
 [patch."crates-io"]
 gix-protocol = { path = "/Users/byron/dev/github.com/GitoxideLabs/gitoxide/gix-protocol" }
 gix-transport = { path = "/Users/byron/dev/github.com/GitoxideLabs/gitoxide/gix-transport" }
+gix-hash = { path = "/Users/byron/dev/github.com/GitoxideLabs/gitoxide/gix-hash" }
